// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a valid user prop 1`] = `
<div
  className="sc-caSCKo gXaPkV"
/>
`;

exports[`renders correctly with no props 1`] = `
<div
  className="sc-caSCKo gfIZkt"
/>
`;
